Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <ul id="historyList"></ul>
     </div>
   </div>
+  <div id="updateBanner" style="display:none;position:fixed;bottom:0;left:0;width:100%;background:#1976d2;color:#fff;text-align:center;padding:12px 0;z-index:1000;cursor:pointer;font-weight:600;box-shadow:0 -2px 8px 0 rgba(25,118,210,0.10);">
+    A new version is available. Click to update.
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
